<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.enyteam.abc.databindingcomm.SharedProductActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="product"
            type="com.abhishek.abc.ilovezappos.models.Product" />
    </data>

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:layout_alignParentTop="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:backgroundTint="@color/background"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/app_bar"
            android:background="@color/white">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:weightSum="10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="4">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@{product.thumbnailImageUrl}" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"
                    android:background="#c0c0c0" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="6"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:shadowColor="#A4A4A4"
                            android:shadowDx="1"
                            android:shadowDy="1"
                            android:text="@{product.brandName}"
                            android:textColor="#000000"
                            android:textSize="25dp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="top|center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/strike_through"
                                android:text="@{product.originalPriceAsString}"
                                android:textColor="#DF013A"
                                android:textSize="15dp"
                                android:visibility="@{product.price != product.originalPrice? View.VISIBLE: View.INVISIBLE }" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@{product.priceAsString}"
                            android:textColor="#01DF3A"
                            android:textSize="20dp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{product.productName}"
                        android:textColor="#0B0B61"
                        android:textSize="18dp" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp">

                            <TextView
                                android:layout_height="wrap_content"
                                android:text="@string/info_label"
                                android:textColor="#000000"
                                android:textSize="22dp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="2dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="2">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/productId_label"
                                android:textColor="#848484"
                                android:textSize="@dimen/genInfoSize" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@{product.productIdAsString}"
                                android:textColor="#000000"
                                android:textSize="@dimen/genInfoSize" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="2">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/colorId_label"
                                android:textColor="#848484"
                                android:textSize="@dimen/genInfoSize" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@{product.colorIdAsString}"
                                android:textColor="#000000"
                                android:textSize="@dimen/genInfoSize" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="2">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/styleId_lable"
                                android:textColor="#848484"
                                android:textSize="@dimen/genInfoSize" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@{product.styleIdAsString}"
                                android:textColor="#000000"
                                android:textSize="@dimen/genInfoSize" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="2">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/percentOff_label"
                                android:textColor="#848484"
                                android:textSize="@dimen/genInfoSize" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@{product.percentOffAsString}"
                                android:textColor="#000000"
                                android:textSize="@dimen/genInfoSize" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="2">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/price_lable"
                                android:textColor="#848484"
                                android:textSize="@dimen/genInfoSize" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@{product.priceAsString}"
                                android:textColor="#000000"
                                android:textSize="@dimen/genInfoSize" />
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/progress_container1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/progress_drawable"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="invisible">

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/fetching_data"
                android:textColor="@color/white" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/add_shopping_cart_white" />
    </RelativeLayout>

</layout>